--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -23,10 +23,10 @@
                     Créateur de listes
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Créer une liste</a>
+                    <a class="dropdown-item" href="#">Modifier une liste</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Ajouter des items</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -34,10 +34,10 @@
                     Destinataire de listes
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Afficher une liste de souhaits</a>
+                    <a class="dropdown-item" href="#">Afficher un item d'une liste</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Réserver un item</a>
                 </div>
             </li>
         </ul>
