--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/all.css">
-    <title>Accueil</title>
+    {% block stylesheets %}{% endblock %}
+
+    <title>{% block title %}WishList{% endblock %}</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ path_for('home') }}"><i class="fas fa-home"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -19,31 +21,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Créateur de listes
+                <a class="nav-link {{ current_page == 'voir_listes' ? 'active': '' }}" href="{{ path_for('listes') }}">
+                    Voir les listes
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Créer une liste</a>
-                    <a class="dropdown-item" href="#">Modifier une liste</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Ajouter des items</a>
-                </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Destinataire de listes
+                <a class="nav-link {{ current_page == 'creer_liste' ? 'active': '' }}" href="#" >
+                    Créer une liste
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Afficher une liste de souhaits</a>
-                    <a class="dropdown-item" href="#">Afficher un item d'une liste</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Réserver un item</a>
-                </div>
             </li>
         </ul>
     </div>
 </nav>
-{% block content %} {% endblock %}
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
 </body>
 <script type="text/javascript" src="assets/js/jquery.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.js"></script>
