--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -41,4 +41,5 @@
 <script type="text/javascript" src="assets/js/jquery.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.js"></script>
 <script type="text/javascript" src="assets/js/all.min.js"></script>
+{% block scripts %}{% endblock %}
 </html>
