--- a/app/Views/pages/404.twig
+++ b/app/Views/pages/404.twig
@@ -1,6 +1,26 @@
-{%  extends "layout.twig" %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="icon" type="image" href="assets/img/w.png">
+    <title>404</title>
+    <!-- Internet Explorer HTML5 enabling script: -->
+    <!--[if IE]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" type="text/css" href="assets/css/404.css" />
 
-{% block content %}
-    <h1>404 not found.</h1>
-    <h4>La page que vous cherchez n'existe malheuresement pas.</h4>
-{% endblock %}
+</head>
+<body>
+
+<div id="rocket"></div>
+
+<hgroup>
+    <h1>404 - Page Not Found</h1>
+    <a href="{{ path_for('home') }}"><h2>Go home</h2></a>
+</hgroup>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="assets/js/404.js"></script>
+</body>
+</html>
