--- a/app/Views/pages/listes.twig
+++ b/app/Views/pages/listes.twig
@@ -16,7 +16,7 @@
             </thead>
             <tbody>
             {% for liste in listes %}
-                <tr onclick="document.location = '{{ path_for('items') }}?liste={{ liste.no }}';">
+                <tr onclick="document.location = '{{ path_for('items') }}?liste={{ liste.token }}';">
                     <th scope="row">{{ liste.no }}</th>
                     <td>{{ liste.user_id }}</td>
                     <td>{{ liste.titre }}</td>
