Modification affichage des objets

--- a/app/Views/pages/listeCreate.twig
+++ b/app/Views/pages/listeCreate.twig
@@ -16,3 +16,7 @@
         <input type="date" id="start" name="trip-start">
     </div>
 {% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+{% endblock %}
