--- a/app/Views/pages/home.twig
+++ b/app/Views/pages/home.twig
@@ -1,6 +1,9 @@
 {% extends "layout.twig"%}
 
 {% block content %}
-    <h1>Bienvenue</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <div class="content">
+        <h1>Bienvenue</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
 {% endblock %}
