--- a/app/Views/pages/items.twig
+++ b/app/Views/pages/items.twig
@@ -1,6 +1,10 @@
 {% extends "layout.twig"%}
 {% block title 'Objets de la liste' %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
+{% endblock %}
+
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
@@ -10,23 +14,25 @@
         </div>
     </section>
 
-    <div class="card-columns">
-    {% for item in items %}
-        <div class="card" style="width: 18rem;">
-            <img src="assets/img/{{ item.img }}"  class="card-img-top" alt="{{ item.img }}">
-            <div class="card-body">
-                <h5 class="card-title">{{ item.nom }}</h5>
-                <p class="card-text">Réservé:
-                    {% if  item.reservation > 0 %}
-                        Oui
-                    {% else %}
-                        Non
-                    {% endif %}
-                </p>
-                <a href="#" class="btn btn-dark ">Détails</a>
+    <div class="d-flex justify-content-center flex-wrap mb-3">
+        {% for item in items %}
+        <div class="p-2 bd-highlight">
+            <div class="card" style="width: 18rem">
+                <img src="assets/img/{{ item.img }}" height=75 class="card-img-top" alt="{{ item.img }}">
+                <div class="card-body text-center">
+                    <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
+                    <p class="card-text text-center">Réservé:
+                        {% if  item.reservation > 0 %}
+                            Oui
+                        {% else %}
+                            Non
+                        {% endif %}
+                    </p>
+                    <a href="#" class="btn btn-dark">Détails</a>
+                </div>
             </div>
         </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 
 {% endblock %}
