possibilite d'edit liste

--- a/app/Views/pages/listeCreate.twig
+++ b/app/Views/pages/listeCreate.twig
@@ -15,7 +15,7 @@
             <input type="date" id="expiration" name="expiration" required>
 
             <button type="Submit" class="btn btn-dark" style="float: right;"
-                    onclick="document.location = '{{ path_for('listeCreateSend') }}';">Créer liste
+                    onclick="document.location = '{{ path_for('listeSend') }}';">Créer liste
             </button>
         </form>
     </div>
