--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -10,7 +10,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/all.css">
     <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
 
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+
+    {% endblock %}
 
     <title>{% block title %}WishList{% endblock %}</title>
 </head>
