--- a/app/Views/pages/items.twig
+++ b/app/Views/pages/items.twig
@@ -1,9 +1,14 @@
-{% extends "layout.twig"%}
+{% extends "layout.twig" %}
 {% block title 'Objets de la liste' %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="assets/css/wrench.css" />
+{% endblock %}
 
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
+            <i style="display: block;}" class="fas fa-wrench" onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
@@ -11,22 +16,22 @@
     </section>
 
     <div class="card-columns">
-    {% for item in items %}
-        <div class="card" style="width: 18rem;">
-            <img src="assets/img/{{ item.img }}"  class="card-img-top" alt="{{ item.img }}">
-            <div class="card-body">
-                <h5 class="card-title">{{ item.nom }}</h5>
-                <p class="card-text">Réservé:
-                    {% if  item.reservation > 0 %}
-                        Oui
-                    {% else %}
-                        Non
-                    {% endif %}
-                </p>
-                <a href="#" class="btn btn-dark ">Détails</a>
+        {% for item in items %}
+            <div class="card" style="width: 18rem;">
+                <img src="assets/img/{{ item.img }}" class="card-img-top" alt="{{ item.img }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ item.nom }}</h5>
+                    <p class="card-text">Réservé:
+                        {% if  item.reservation > 0 %}
+                            Oui
+                        {% else %}
+                            Non
+                        {% endif %}
+                    </p>
+                    <a href="#" class="btn btn-dark ">Détails</a>
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 
 {% endblock %}
