creation item | modification item | suppression item

--- a/app/Views/pages/listeCreate.twig
+++ b/app/Views/pages/listeCreate.twig
@@ -5,7 +5,7 @@
     <div class="body m-5">
         <form action="" method="post">
             <h4>Titre</h4>
-            <input class="form-control" type="text" name="titre" placeholder="" required>
+            <input class="form-control" type="text" name="titre" required>
             <br>
             <h4>Description</h4>
             <textarea cols="111" name="description" id="description" rows="10" required></textarea>
