--- a/app/Views/pages/items.twig
+++ b/app/Views/pages/items.twig
@@ -2,14 +2,16 @@
 {% block title 'Objets de la liste' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/css/wrench.css" />
+    <link rel="stylesheet" href="assets/css/font_awesome.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 {% endblock %}
 
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
-            <i style="display: block;}" class="fas fa-wrench" onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
+            <i class="fas fa-wrench" onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
+            <br>
+            <i class="fas fa-plus" onclick="document.location = '{{ path_for('itemCreate') }}?token={{ liste.token }}';"></i>
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
@@ -31,7 +33,10 @@
                             Non
                         {% endif %}
                     </p>
-
+                    {% if  item.reservation <= 0 %}
+                        <i id="item-editor" class="fas fa-wrench" onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
+                        <i id="item-delete" class="fas fa-trash-alt" onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+                    {% endif %}
                     <a href="{{ path_for('items') }}?token={{ liste.token }}?item={{ item.id }}" class="btn btn-dark">Détails</a>
                 </div>
             </div>
