--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -13,13 +13,19 @@
         </div>
     </section>
 
-    <div class="container mt-4">
-        <img class="rounded float-left img-thumbnail" width=40% src="assets/img/{{ item.img }}">
+    <div class="d-flex justify-content-around">
+        <img class="rounded float-left img-thumbnail" style="width: 18rem" src="assets/img/{{ item.img }}">
         <div class="text-center">
             <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
             <p>{{ item.descr }}</p>
             <p><strong>{{ item.tarif }} euros </strong></p>
-            <button class="btn btn-dark">Je réserve !</button>
+            {% if item.reservation != 0 %}
+                <div class="alert alert-danger">
+                    Cet objet est déjà réservé
+                </div>
+            {% else %}
+                <button class="btn btn-dark">Je réserve !</button>
+            {% endif %}
         </div>
 
     </div>
