--- a/app/Views/pages/itemCreate.twig
+++ b/app/Views/pages/itemCreate.twig
@@ -12,11 +12,17 @@
             <br>
             <br>
             <div style="display: inline" class="form-group row">
-                <div style="float:left;" class="col-xs-2">
+                <div style="float: left;" class="col-xs-2">
                     <h4>Prix</h4>
                     <input class="form-control" type="number" name="tarif" required>
                 </div>
-                <div style="float:right;" class="col-xs-4">
+
+                <div style="float: left; margin-left: 10em;" class="col-xs-4">
+                    <h4>Image</h4>
+                    <input class="form-control" type="text" name="img">
+                </div>
+
+                <div style="float: right;" class="col-xs-4">
                     <h4>Lien externe</h4>
                     <input class="form-control" type="url" name="url">
                 </div>
