--- a/app/Views/pages/itemEditor.twig
+++ b/app/Views/pages/itemEditor.twig
@@ -17,6 +17,12 @@
                     <h4>Prix</h4>
                     <input class="form-control" type="number" name="tarif" value="{{ item.tarif }}" required>
                 </div>
+
+                <div style="float: left; margin-left: 10em;" class="col-xs-4">
+                    <h4>Image</h4>
+                    <input class="form-control" type="text" name="img" value="{{ item.img }}">
+                </div>
+
                 <div style="float:right;" class="col-xs-4">
                     <h4>Lien externe</h4>
                     <input class="form-control" type="url" name="url" value="{{ item.url }}">
