--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image" href="assets/img/w.png">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-
     {% block stylesheets %}
 
     {% endblock %}
@@ -43,5 +42,6 @@
 <script type="text/javascript" src="assets/js/jquery.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.js"></script>
 <script type="text/javascript" src="assets/js/all.min.js"></script>
+<script type="text/javascript" src="assets/js/copyClipboard.js"></script>
 {% block scripts %}{% endblock %}
 </html>
