--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -4,13 +4,16 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/css/font_awesome.css" />
+    <link rel="stylesheet" href="assets/css/font_awesome.css"/>
 {% endblock %}
 
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
-            <i style="display: block;}" class="fas fa-wrench" onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
+            <i style="display: block;}" class="fas fa-wrench"
+               onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
+            <br>
+            <i class="fas fa-share-alt" id="copie" onclick="copy()"></i>
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
@@ -21,9 +24,11 @@
         <img class="rounded float-left img-thumbnail" width=40% src="{{ item.img }}">
         <div class="text-center">
             {% if  item.reservation <= 0 %}
-                <i style="float: right;" class="fas fa-wrench" onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
+                <i style="float: right;" class="fas fa-wrench"
+                   onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
                 <br>
-                <i style="float: right;" class="fas fa-trash-alt" onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+                <i style="float: right;" class="fas fa-trash-alt"
+                   onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
             {% endif %}
             <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
             <p>{{ item.descr }}</p>
