--- a/app/Views/pages/items.twig
+++ b/app/Views/pages/items.twig
@@ -2,18 +2,19 @@
 {% block title 'Objets de la liste' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/css/font_awesome.css" />
+    <link rel="stylesheet" href="assets/css/font_awesome.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 {% endblock %}
-
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
-            <i class="fas fa-wrench" onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
+            <i class="fas fa-wrench"
+               onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
             <br>
-            <i class="fas fa-plus" onclick="document.location = '{{ path_for('itemCreate') }}?token={{ liste.token }}';"></i>
+            <i class="fas fa-plus"
+               onclick="document.location = '{{ path_for('itemCreate') }}?token={{ liste.token }}';"></i>
             <br>
-            <i class="fas fa-share-alt" onclick="document.location = '{{ path_for('listeShare') }}?token={{ liste.token }}';"></i>
+            <i class="fas fa-share-alt" id="copie" onclick="copy()"></i>
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
@@ -23,26 +24,30 @@
 
     <div class="d-flex justify-content-center flex-wrap mb-3">
         {% for item in items %}
-        <div class="p-2 bd-highlight">
-            <div class="card" style="width: 18rem">
-                <img src="{{ item.img }}" class="card-img-top" alt="{{ item.img }}">
-                <div class="card-body text-center">
-                    <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
-                    <p class="card-text text-center">Réservé:
-                        {% if  item.reservation > 0 %}
-                            Oui
-                        {% else %}
-                            Non
+            <div class="p-2 bd-highlight">
+                <div class="card" style="width: 18rem">
+                    <img src="{{ item.img }}" class="card-img-top" alt="{{ item.img }}">
+                    <div class="card-body text-center">
+                        <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong>
+                        </h5>
+                        <p class="card-text text-center">Réservé:
+                            {% if  item.reservation > 0 %}
+                                Oui
+                            {% else %}
+                                Non
+                            {% endif %}
+                        </p>
+                        {% if  item.reservation <= 0 %}
+                            <i id="item-editor" class="fas fa-wrench"
+                               onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
+                            <i id="item-delete" class="fas fa-trash-alt"
+                               onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
                         {% endif %}
-                    </p>
-                    {% if  item.reservation <= 0 %}
-                        <i id="item-editor" class="fas fa-wrench" onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
-                        <i id="item-delete" class="fas fa-trash-alt" onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
-                    {% endif %}
-                    <a href="{{ path_for('items') }}?token={{ liste.token }}?item={{ item.id }}" class="btn btn-dark">Détails</a>
+                        <a href="{{ path_for('items') }}?token={{ liste.token }}?item={{ item.id }}"
+                           class="btn btn-dark">Détails</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 {% endblock %}
