Modif url et fix path

--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image" href="assets/img/w.png">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="icon" type="image" href="/mywishlist/public/assets/img/w.png">
+    <link rel="stylesheet" type="text/css" href="/mywishlist/public/assets/css/bootstrap.css">
     {% block stylesheets %}
 
     {% endblock %}
@@ -39,9 +39,9 @@
     {% block content %}{% endblock %}
 </div>
 </body>
-<script type="text/javascript" src="assets/js/jquery.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.js"></script>
-<script type="text/javascript" src="assets/js/all.min.js"></script>
-<script type="text/javascript" src="assets/js/copyClipboard.js"></script>
+<script type="text/javascript" src="/mywishlist/public/assets/js/jquery.js"></script>
+<script type="text/javascript" src="/mywishlist/public/assets/js/bootstrap.js"></script>
+<script type="text/javascript" src="/mywishlist/public/assets/js/all.min.js"></script>
+<script type="text/javascript" src="/mywishlist/public/assets/js/copyClipboard.js"></script>
 {% block scripts %}{% endblock %}
 </html>
