--- a/app/Views/pages/reserved.twig
+++ b/app/Views/pages/reserved.twig
@@ -2,7 +2,7 @@
 {% block title 'Item reservé' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/css/font_awesome.css" />
+    <link rel="stylesheet" href="/mywishlist/public/assets/css/font_awesome.css" />
 {% endblock %}
 
 {% block content %}
