--- a/app/Views/pages/items.twig
+++ b/app/Views/pages/items.twig
@@ -9,12 +9,14 @@
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
-            <i class="fas fa-wrench"
-               onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
-            <br>
-            <i class="fas fa-plus"
-               onclick="document.location = '{{ path_for('itemCreate') }}?token={{ liste.token }}';"></i>
-            <br>
+            {% if  token != "" %}
+                <i class="fas fa-wrench"
+                   onclick="document.location = '{{ path_for('listeEditor') }}?token={{ liste.token }}';"></i>
+                <br>
+                <i class="fas fa-plus"
+                   onclick="document.location = '{{ path_for('itemCreate') }}?token={{ liste.token }}';"></i>
+                <br>
+            {% endif %}
             <i class="fas fa-share-alt" id="copie" onclick="copy()"></i>
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
@@ -38,14 +40,21 @@
                                 Non
                             {% endif %}
                         </p>
-                        {% if  item.reservation <= 0 %}
-                            <i id="item-editor" class="fas fa-wrench"
-                               onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
-                            <i id="item-delete" class="fas fa-trash-alt"
-                               onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+                        {% if  token != "" %}
+                            {% if  item.reservation <= 0 %}
+                                <i id="item-editor" class="fas fa-wrench"
+                                   onclick="document.location = '{{ path_for('itemEditor') }}?item={{ item.id }}';"></i>
+                                <i id="item-delete" class="fas fa-trash-alt"
+                                   onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+                            {% endif %}
                         {% endif %}
-                        <a href="{{ path_for('items', { 'no': liste.no, 'id': item.id}) }}"
-                           class="btn btn-dark">Détails</a>
+                        {% if  token != "" %}
+                            <a href="{{ path_for('itemsEdit', { 'no': liste.no, 'token': token, 'id': item.id}) }}"
+                               class="btn btn-dark">Détails</a>
+                        {% else %}
+                            <a href="{{ path_for('items', { 'no': liste.no, 'id': item.id}) }}"
+                               class="btn btn-dark">Détails</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
