MAJ Gestion de liste + url

--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link {{ current_page == 'creer_liste' ? 'active': '' }}" href="{{ path_for('listeCreate') }}" >
+                <a class="nav-link {{ current_page == 'creer_liste' ? 'active': '' }}" href="{{ path_for('listeManage') }}" >
                     Créer une liste
                 </a>
             </li>
