--- a/app/Views/pages/items.twig
+++ b/app/Views/pages/items.twig
@@ -2,8 +2,7 @@
 {% block title 'Objets de la liste' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="/mywishlist/public/assets/css/font_awesome.css"/>
-    <link rel="stylesheet" type="text/css" href="/mywishlist/public/assets/css/app.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_path }}/assets/css/app.css">
 {% endblock %}
 
 {% block content %}
