--- a/app/Views/pages/404.twig
+++ b/app/Views/pages/404.twig
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="icon" type="image" href="/mywishlist/public/assets/img/w.png">
+    <link rel="icon" type="image" href="{{ base_path }}/assets/img/w.png">
     <title>404</title>
     <!-- Internet Explorer HTML5 enabling script: -->
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="/mywishlist/public/assets/css/404.css" />
+    <link rel="stylesheet" type="text/css" href="{{ base_path }}/assets/css/404.css" />
 
 </head>
 <body>
@@ -21,6 +21,6 @@
 </hgroup>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="/mywishlist/public/assets/js/404.js"></script>
+<script src="{{ base_path }}/assets/js/404.js"></script>
 </body>
 </html>
