--- a/app/Views/pages/itemManage.twig
+++ b/app/Views/pages/itemManage.twig
@@ -46,5 +46,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="{{ base_path }}/assets/ckeditor/ckeditor.js"></script>
 {% endblock %}
