--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -13,7 +13,7 @@
         <div class="container">
             {% if  token != "" %}
                 <i style="display: block;}" class="fas fa-wrench"
-                   onclick="document.location = '{{ path_for('listeManage') }}?token={{ liste.token }}';"></i>
+                   onclick="document.location = '{{ path_for('listeManage', { 'token': liste.token }) }}';"></i>
                 <br>
             {% endif %}
             <i class="fas fa-share-alt" id="copie" onclick="copy()"></i>
@@ -29,10 +29,10 @@
             {% if  token != "" %}
                 {% if  item.reservation <= 0 %}
                     <i style="float: right;" class="fas fa-wrench"
-                       onclick="document.location = '{{ path_for('itemManage') }}?item={{ item.id }}';"></i>
+                       onclick="document.location = '{{ path_for('itemManage', { 'token': liste.token, 'id': item.id }) }}';"></i>
                     <br>
                     <i style="float: right;" class="fas fa-trash-alt"
-                       onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+                       onclick="document.location = '{{ path_for('itemDelete', { 'id': item.id}) }}';"></i>
                 {% endif %}
             {% endif %}
             <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
