--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -24,27 +24,29 @@
     </section>
 
     <div class="container mt-4">
-        <img class="rounded float-left img-thumbnail" width=40% src="{{ item.img }}">
-        <div class="text-center">
-            {% if  token != "" %}
-                {% if  item.reservation <= 0 %}
-                    <i style="float: right;" class="fas fa-wrench"
-                       onclick="document.location = '{{ path_for('itemManage') }}?item={{ item.id }}';"></i>
-                    <br>
-                    <i style="float: right;" class="fas fa-trash-alt"
-                       onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+        <div class="row">
+            <img class="col-sm-4 rounded img-thumbnail" width=40% src="{{ item.img }}">
+            <div class="col-sm-8 text-center">
+                {% if  token != "" %}
+                    {% if  item.reservation <= 0 %}
+                        <i style="float: right;" class="fas fa-wrench"
+                           onclick="document.location = '{{ path_for('itemManage') }}?item={{ item.id }}';"></i>
+                        <br>
+                        <i style="float: right;" class="fas fa-trash-alt"
+                           onclick="document.location = '{{ path_for('itemDelete') }}?item={{ item.id }}';"></i>
+                    {% endif %}
                 {% endif %}
-            {% endif %}
-            <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
-            <p>{{ item.descr }}</p>
-            <p><strong>{{ item.tarif }} euros </strong></p>
-            {% if item.reservation != 0 %}
-                <div class="alert alert-danger">
-                    Cet objet est déjà réservé
-                </div>
-            {% else %}
-                <button href="" class="btn btn-dark">Je réserve !</button>
-            {% endif %}
+                <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
+                <p>{{ item.descr }}</p>
+                <p><strong>{{ item.tarif }} euros </strong></p>
+                {% if item.reservation != 0 %}
+                    <div class="alert alert-danger">
+                        Cet objet est déjà réservé
+                    </div>
+                {% else %}
+                    <a href="{{ path_for('book') }}" class="btn btn-dark">Je réserve !</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 {% endblock %}
