--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -2,11 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image" href="{{ base_path }}/assets/img/w.png">
-    <link rel="stylesheet" type="text/css" href="{{ base_path }}/assets/css/bootstrap.css">
+    <link rel="icon" type="image" href="{{ base_path }}/public/img/w.png">
+    <link rel="stylesheet" type="text/css" href="{{ base_path }}/public/css/bootstrap.min.css">
     {% block stylesheets %}
 
     {% endblock %}
@@ -23,12 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link {{ current_page == 'voir_listes' ? 'active': '' }}" href="{{ path_for('listes') }}">
-                    Voir les listes
-                </a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link {{ current_page == 'creer_liste' ? 'active': '' }}" href="{{ path_for('listeManage') }}" >
+                <a class="nav-link {{ current_page == 'creer_liste' ? 'active': '' }}" href="{{ path_for('createListe') }}">
                     Créer une liste
                 </a>
             </li>
@@ -36,12 +30,13 @@
     </div>
 </nav>
 <div class="container">
+    {% block flash %}{% endblock %}
     {% block content %}{% endblock %}
 </div>
-</body>
-<script type="text/javascript" src="{{ base_path }}/assets/js/jquery.js"></script>
-<script type="text/javascript" src="{{ base_path }}/assets/js/bootstrap.js"></script>
-<script type="text/javascript" src="{{ base_path }}/assets/js/all.min.js"></script>
-<script type="text/javascript" src="{{ base_path }}/assets/js/copyClipb oard.js"></script>
+
+<script type="text/javascript" src="{{ base_path }}/public/js/jquery.min.js"></script>
+<script type="text/javascript" src="{{ base_path }}/public/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="{{ base_path }}/public/js/all.min.js"></script>
 {% block scripts %}{% endblock %}
+</body>
 </html>
