--- a/app/Views/pages/liste.twig
+++ b/app/Views/pages/liste.twig
@@ -8,17 +8,12 @@
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
-            {% if  token != "" %}
-                <i class="fas fa-wrench"
-                   onclick="document.location = '{{ path_for('listeManage', { 'token': liste.token }) }}';"></i>
-                <br>
-                <i class="fas fa-plus"
-                   onclick="document.location = '{{ path_for('itemManage', { 'token': liste.token }) }}';"></i>
-                <br>
-            {% endif %}
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
+            {% if creator == true %}
+                <a href="" class="btn btn-outline-dark float-right">Administrer</a>
+            {% endif %}
         </div>
     </section>
 
