--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -33,7 +33,36 @@
                         Cet objet est déjà réservé
                     </div>
                 {% else %}
-                    <button type="button" class="btn btn-dark">Réserver</button>
+                    <div class="modal fade" id="reservation" tabindex="-1" role="dialog" aria-labelledby="reserverLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="reserverLabel">Réservation</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <form method="POST" action="{{ path_for('bookItem', {'id': item.id, 'token': liste.token}) }}">
+                                    <div class="modal-body">
+                                        <div class="form-group">
+                                            <label for="inputName">Nom*</label>
+                                            <input type="text" name="name" class="form-control" id="inputName" placeholder="Xavier" value="{{ name }}" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="textarea">Ajoutez un message à votre réservation</label>
+                                            <textarea class="form-control" id="textarea" rows="4" name="message"></textarea>
+                                        </div>
+                                        Les champs marqués d'un astérisque sont obligatoires.
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                                        <button type="submit" class="btn btn-dark">Réserver</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#reservation">Réserver</button>
                 {% endif %}
             </div>
         </div>
